# helyos-cli

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: auto-release.yml  ci.yml  release.yml
src/: client.rs  commands.rs  config.rs  main.rs  output.rs
src/commands/: auth.rs  cluster.rs  context.rs  deploy.rs  deployments.rs  init.rs  lifecycle.rs  login.rs  logs.rs  mod.rs  node.rs  nodes.rs  pods.rs  project.rs  route.rs  scale.rs  secret.rs  setup.rs  status.rs  top.rs
src/output/: age.rs  deploy.rs  mod.rs  panel.rs  spinner.rs  style.rs  table.rs
src/tui/: actions.rs  app.rs  event.rs  mod.rs  ui.rs
src/tui/widgets/: event_list.rs  mod.rs  node_gauge.rs  pod_table.rs
