[package]
name = "nexa-cli"
description = "NexaNet CLI — deploy and manage containers"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/nexa-net/nexa-cli"
rust-version = "1.85"

[[bin]]
name = "nexa"
path = "src/main.rs"

[dependencies]
nexa-core = { git = "https://github.com/nexa-net/nexa-core", tag = "v0.1.4" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
tar = "0.4"
tokio-stream = "0.1"
futures = "0.3"
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"
atty = "0.2"
urlencoding = "2"
ratatui = "0.29"
crossterm = "0.28"
