[package]
name = "helyos-cli"
description = "Helyos CLI — deploy and manage containers"
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/helyos-labs/helyos-cli"
rust-version = "1.85"

[[bin]]
name = "helyos"
path = "src/main.rs"

[dependencies]
helyos-core = { git = "https://github.com/helyos-labs/helyos-core", tag = "v0.1.7" }
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
anyhow = "1.0"
clap = { version = "4.6", features = ["derive", "env"] }
clap_complete = "4.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.1"
tar = "0.4"
tokio-stream = "0.1"
futures = "0.3"
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"
urlencoding = "2.1"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"
